@@ -1,3 +1,12 @@
+2013-01-21  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* Library.mdproj:
+	* test.wrl:
+	* indexT.wrl:
+	* Import_proto.wrl:
+	* Counter_proto.wrl:
+	* Counter_proto.wrl.gz: 
+
 2013-01-20  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* Library.mdproj:
