@@ -1,3 +1,8 @@
+2013-01-21  Holger Seelig  <holger.seelig@yahoo.de>
+
+	* X3DBaseNode.h:
+	* AudioClip.cpp: 
+
 2013-01-20  Holger Seelig  <holger.seelig@yahoo.de>
 
 	* X3D.h:
